--- a/my_list.html
+++ b/my_list.html
@@ -1,8 +1,8 @@
-
+<h1>My Music List</h1>
 
 <ul>
-<li> "apple"
-<li> "orange"
-<li> "grape"
+  <li> "apple"
+  <li> "orange"
+  <li> "grape"
 <li> "peach"
 </ul>
